@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Apply Patch #1966455: Fix for cut off NPC dialog messages.
+ common/dialog.c
+Arvid Norlander 2008-05-20
+
 Apply Patch #1966113: Fix uninitialised range vector in monster.c.
  server/monster.c
 Arvid Norlander 2008-05-20
